fixes Safari bug with anvil image not showing up - needed to fix css position of landing and container elements and move images out of container

--- a/css/artfoundry.css
+++ b/css/artfoundry.css
@@ -4,7 +4,7 @@ body { margin: 0; padding: 0; height: 100%; }
 ::-webkit-scrollbar { display: none; }
 
 #icon-container {
-    position: fixed;
+    position: absolute;
     top: 15%;
     left: 25%;
     max-width: 100%;
@@ -12,7 +12,7 @@ body { margin: 0; padding: 0; height: 100%; }
 }
 .img-landing {
     z-index: 0;
-    position: fixed;
+    position: absolute;
     top: 15%;
     left: 0;
     max-width: 100%;
@@ -21,9 +21,8 @@ body { margin: 0; padding: 0; height: 100%; }
     z-index: 2;
 }
 .img-landing#img-arttitle {
+    left: 10%;
     z-index: 3;
-    top: 15%;
-    left: 15%;
 }
 #img-logo-large { position: absolute; max-width: 100%; height: auto; margin: auto;}
 #img-logo { margin-top: 2em; margin-right: -5%;}
